--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 node_modules/
+node_modules
 dist/
+.next
 *.log
 .DS_Store
 .env
-.env.*
+.env.local
+.env.production
+.env.development
+vault.enc.json
